<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Merry Christmas</string>
    <string name="merry_christmas">Merry Christmas!</string>
    <string name="happy_new_year">\&amp; Happy New Year!</string>
    <string name="happy_holidays">Wishing you joy, peace, and happiness</string>
    <string name="powered_by">Powered by 👑 John Reese</string>
    <string name="christmas_image">Christmas Image</string>
</resources>
